<resources>
    <string name="app_name">CPMH +</string>

    <string name="error_empty_field">This field cannot be empty.</string>
    <string name="error_badly_formatted_email"></string>
    <string name="error_weak_password"></string>
    <string name="error_wrong_email"></string>
    <string name="error_wrong_password"></string>
    <string name="error_authentication_failed"></string>
    <string name="error_password_recovery_failed"></string>

    <plurals name="error_too_many_sign_in_attempts">
        <item quantity="one">Too many failed sign in attempts. Please try again in %1$d minute.</item>
        <item quantity="other">Too many failed sign in attempts. Please try again in %1$d minutes.</item>
    </plurals>

    <string name="hint_name_field">Name</string>
    <string name="hint_birthday_field">Birthday</string>
    <string name="hint_phone_field">Phone</string>
    <string name="hint_email_field">Email</string>
    <string name="hint_password_field">Password</string>

    <string name="text_sign_in_button">Sign In</string>
    <string name="text_password_recovery_button">Recover Password</string>

    <string-array name="federative_units">
        <item>Estado</item>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
