<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInFragment">

    <android.support.constraint.Guideline
        android:id="@+id/vertical_middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_field_layout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_middle_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_field"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_field_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/email_field_layout"
        app:layout_constraintStart_toStartOf="@+id/email_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_field_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_field"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/text_sign_in_button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/password_field_layout"
        app:layout_constraintStart_toStartOf="@+id/password_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_field_layout" />

    <Button
        android:id="@+id/password_recovery_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_password_recovery_button"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />


</android.support.constraint.ConstraintLayout>