<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:id = "@+id/add_prospect_layout"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">


        <Spinner
            android:id="@+id/federative_unit_field"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/federative_units"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthday_field_layout" />


        <Button
            android:id="@+id/submit_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="ENVIAR"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vertical_middle_guideline"
            app:layout_constraintTop_toBottomOf="@+id/interestLayout" />


        <Button
            android:id="@+id/cancel_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="6dp"
            android:text="CANCELAR"
            app:layout_constraintBottom_toBottomOf="@+id/submit_button"
            app:layout_constraintEnd_toStartOf="@+id/vertical_middle_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/submit_button" />


        <android.support.constraint.Guideline
            android:id="@+id/vertical_middle_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_field_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_field" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/city_field_layout"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/phone_field_layout"
            app:layout_constraintTop_toBottomOf="@+id/phone_field_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/city_field"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:hint="Cidade" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/birthday_field_layout"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/email_field_layout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/vertical_middle_guideline"
            app:layout_constraintTop_toBottomOf="@+id/email_field_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/birthday_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birthday_field"
                android:inputType="date"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_field_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/vertical_middle_guideline"
            app:layout_constraintStart_toStartOf="@+id/email_field_layout"
            app:layout_constraintTop_toBottomOf="@+id/email_field_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone_field"
                android:inputType="number|phone"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/typeLayout"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_field_layout">

            <TextView
                android:id="@+id/textTypeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Types" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/type_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_item_interest" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/interestLayout"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city_field_layout">

            <TextView
                android:id="@+id/textInterrestView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Interest" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/interests_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_item_interest" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_field_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/name_field_layout"
            app:layout_constraintStart_toStartOf="@+id/name_field_layout"
            app:layout_constraintTop_toBottomOf="@+id/name_field_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_field"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>